# othello_multimcts

./: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md  asset-manifest.json  index.html  stats.txt
cli/: Cargo.toml
cli/src/game/: from_env.rs
cli/src/mcts/: impl.rs  mod.rs
cli/src/naive/: impl.rs  mod.rs
src/: lib.rs  main.rs
src/algo/: impl.rs  mod.rs
src/board/: default.rs  display.rs  fromio.rs  fromiterator.rs  fromstr.rs  impl.rs  internals.rs  io.rs  mod.rs
src/board/moves/: display.rs  fromstr.rs  iterator.rs  mod.rs
src/board_move/: display.rs  fromstr.rs  impl.rs  mod.rs
src/enums/: algo_type.rs  log_level.rs  mod.rs  parse_board_error.rs  parse_moves_error.rs  side.rs
src/mcts/: impl.rs  internals.rs  mod.rs
src/move/: .display.rs.swp  display.rs  fromio.rs  mod.rs
src/move_io/: display.rs  fromio.rs  mod.rs
src/node/: impl.rs  mod.rs
src/node_info/: display.rs  impl.rs  mod.rs
src/side/: default.rs  display.rs  impl.rs  mod.rs  not.rs
static/css/: main.f4f6858d.chunk.css  main.f4f6858d.chunk.css.map
static/js/: 2.cd0a96e0.chunk.js  2.cd0a96e0.chunk.js.map  3.bd00aa46.chunk.js  3.bd00aa46.chunk.js.map  4.6b083271.chunk.js  4.6b083271.chunk.js.map  main.3efd6112.chunk.js  main.3efd6112.chunk.js.map  runtime-main.06c9d95d.js  runtime-main.06c9d95d.js.map
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/www/: package-lock.json  package.json
wasm/www/src/: .App.js.swo  App.css  App.js
