[package]
name = "othello_multimcts"
version = "0.1.0"
authors = ["xumarcus <xumarcus.sg@gmail.com>"]
edition = "2018"

[dependencies]
derivative = "^2.2.0"
getset = "^0.1.0"
noisy_float = "^0.1.13"
rand = "^0.8"
strum = "^0.20"
strum_macros = "^0.20"

# Optimizations
[profile.release]
lto = "fat"
codegen-units = 1
